trunk/Archive2/c0/191ffa33ae8799/output
main.cpp: In function 'void Set(Node&, std::string, bool)':
main.cpp:44:1: error: expected ';' before '}' token
 }
 ^
main.cpp:44:1: error: statement cannot resolve address of overloaded function
